--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-test
-  {% for tweet in tweets %}
-    {{ tweet }}
-  {% endfor %}
-</body>
-</html>
+{{ result }}
